fix some horizontal extra space stuff

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1,5 +1,9 @@
 @import "seattletimes";
 
+main.interactive {
+    padding: 0;
+}
+
 @media @tablet {
     .show-on-desktop {
         display: none;
@@ -58,7 +62,7 @@
         font-weight: bold;
         width: 254px;
         height: 28px;
-        margin: 0 50px 10px;
+        margin: 0 50px 10px 0;
         outline: none;
         border-radius: 4px;
         padding: 2px 0;
